# GraphifyMind

./: .gitignore  README.md
knowledgeGraph/: .dockerignore  Dockerfile  Docs  README.md  main.py  pyproject.toml  requirements.txt
knowledgeGraph/graph/: knowledge_graph.html
knowledgeGraph/input/: Srinivasa Ramanujan.docx
knowledgeGraph/notebook/: LLMGraphTransformer.ipynb
knowledgeGraph/src/: knowledgeGraph.py
